--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  background-color: rgb(117, 117, 238);
+  background: linear-gradient(#4E94E8, #9D4FF1);
   overflow: hidden;
 }
 
